[project]
name = "tarzan"
description = "high-level IO for tar based dataset"
version = "0.1.0"
authors = [
    { name = "Yuchao Zhang", email = "418121364@qq.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["datasets", "tar"]

dependencies = [
    "numpy~=1.0",
    "soundfile~=0.12.1",
    "librosa~=0.10.1",
    "dill~=0.3.7",
    "more-itertools~=10.2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]

dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-print",
    "isort",
    "mypy",
    "pep8-naming",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["tarzan"]

[tool.hatch.build.targets.wheel]
only-include = ["tarzan"]

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '(_version.py)'

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
skip_glob = ["**/gen/*", ".venv*/*", "venv*/*"]
known_first_party = ["tarzan"]
# see https://github.com/timothycrosley/isort#multi-line-output-modes for details
multi_line_output = 3
